# forseti

./: .dockerignore  .gitignore  .hadolint.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-COMMERCIAL  Makefile  README.md  SECURITY.md  build.rs  config.ci.toml  config.example.toml  manifest.scm
.github/workflows/: ci.yml  docker.yml  docs.yml  hadolint.yml  release.yml
assets/: input.css
assets/legal/: imprint.en.md  privacy.en.md  terms.en.md
docs/: SUMMARY.md  book.toml  integration-guide.md  introduction.md  operator-guide-proxy.md  operator-guide.md  organizations.md  user-guide.md
docs/commercial/: index.md  observability.md  organizations.md  saml.md
docs/dev/: flows.md  organizations-internals.md  testing_checklist.md
forseti-unix/: Cargo.toml  thin-deps-guard.sh
forseti-unix/authorizedkeys/: Cargo.toml  README.md
forseti-unix/authorizedkeys/src/: main.rs
forseti-unix/client/: Cargo.toml
forseti-unix/client/src/: lib.rs
forseti-unix/daemon/: Cargo.toml
forseti-unix/daemon/src/: cache.rs  config.rs  device.rs  lib.rs  main.rs  offline.rs  provision.rs  server.rs  upstream.rs
forseti-unix/daemon/tests/: socket.rs
forseti-unix/nss/: Cargo.toml  README.md  build.rs
forseti-unix/nss/src/: lib.rs
forseti-unix/pam/: Cargo.toml  build.rs
forseti-unix/pam/src/: core.rs  lib.rs
forseti-unix/pam/src/pam/: constants.rs  conv.rs  macros.rs  mod.rs  module.rs
forseti-unix/proto/: Cargo.toml
infra/: docker-compose.yml  init-db.sh  mock-saml.env  seed-admin.sh
infra/guix/: README-linux-auth.md  forseti-unix-service.scm  forseti-unix-system-test.scm  run-system-test.scm
infra/hydra/: hydra.yml
infra/kratos/: audit_event.jsonnet  identity.schema.json  kratos.yml
infra/linux-test/: Containerfile  README.md  entrypoint.sh  seed.sh  unseed.sh
locales/ar/: admin.ftl  auth.ftl  commercial.ftl  common.ftl  consent.ftl  dashboard.ftl  device.ftl  errors.ftl  format.ftl  kratos.ftl  nav.ftl  onboarding.ftl  orgs.ftl  profiles.ftl  settings.ftl
locales/de/: admin.ftl  auth.ftl  commercial.ftl  common.ftl  consent.ftl  dashboard.ftl  device.ftl  errors.ftl  format.ftl  kratos.ftl  legal.ftl  nav.ftl  onboarding.ftl  orgs.ftl  profiles.ftl  settings.ftl
locales/en/: admin.ftl  auth.ftl  commercial.ftl  common.ftl  consent.ftl  dashboard.ftl  device.ftl  errors.ftl  format.ftl  kratos.ftl  legal.ftl  nav.ftl  onboarding.ftl  orgs.ftl  profiles.ftl  settings.ftl
locales/es/: admin.ftl  auth.ftl  commercial.ftl  common.ftl  consent.ftl  dashboard.ftl  device.ftl  errors.ftl  format.ftl  kratos.ftl  nav.ftl  onboarding.ftl  orgs.ftl  profiles.ftl  settings.ftl
locales/fr/: admin.ftl  auth.ftl  commercial.ftl  common.ftl  consent.ftl  dashboard.ftl  device.ftl  errors.ftl  format.ftl  kratos.ftl  nav.ftl  onboarding.ftl  orgs.ftl  profiles.ftl  settings.ftl
locales/it/: admin.ftl  auth.ftl  commercial.ftl  common.ftl  consent.ftl  dashboard.ftl  device.ftl  errors.ftl  format.ftl  kratos.ftl  nav.ftl  onboarding.ftl  orgs.ftl  profiles.ftl  settings.ftl
locales/pt/: admin.ftl  auth.ftl  commercial.ftl  common.ftl  consent.ftl  dashboard.ftl  device.ftl  errors.ftl  format.ftl  kratos.ftl  nav.ftl  onboarding.ftl  orgs.ftl  profiles.ftl  settings.ftl
locales/ru/: admin.ftl  auth.ftl  commercial.ftl  common.ftl  consent.ftl  dashboard.ftl  device.ftl  errors.ftl  format.ftl  kratos.ftl  nav.ftl  onboarding.ftl  orgs.ftl  profiles.ftl  settings.ftl
locales/th/: admin.ftl  auth.ftl  commercial.ftl  common.ftl  consent.ftl  dashboard.ftl  device.ftl  errors.ftl  format.ftl  kratos.ftl  nav.ftl  onboarding.ftl  orgs.ftl  profiles.ftl  settings.ftl
src/: app.rs  cli.rs  config.rs  config_cli.rs  cookies.rs  csrf.rs  dashboard.rs  db.rs  discovery.rs  extractors.rs  flash.rs  flow_view.rs  format.rs  i18n.rs  legal.rs  locale.rs  logo_cache.rs  mailer.rs  main.rs  metrics.rs  oauth_client_metadata.rs  oidc_providers.rs  page_chrome.rs  profiles.rs  rate_limit.rs  render.rs  schema.rs  session_view.rs  signed_cookie.rs  state.rs  static_assets.rs  theme.rs  web.rs
src/accounts/: cookie.rs  handlers.rs  mod.rs
src/admin/: actions.rs  audit.rs  configuration.rs  dcr_tokens.rs  hosts.rs  identities.rs  mod.rs  posix.rs  saml.rs  sessions.rs  status.rs  webhooks.rs
src/audit/: kratos_webhook.rs  mod.rs
src/auth/: error.rs  login.rs  logout.rs  mod.rs  recovery.rs  registration.rs  verification.rs
src/commercial/: license.rs  mod.rs  settings_page.rs  store.rs  upsell.rs  verify.rs
src/config_cli/: catalog.rs  check.rs  init.rs  io.rs  menu.rs  mod.rs  modify.rs  yamlutil.rs
src/handoff/: cookie.rs  mod.rs
src/identity/: claim_email.rs  mod.rs
src/oauth/: consent.rs  device.rs  device_verify.rs  login.rs  logout.rs  mod.rs
src/orgs/: cookie.rs  db.rs  domain_prompt.rs  domains.rs  invite.rs  join.rs  logo.rs  middleware.rs  mod.rs  nav.rs  public_landing.rs  teams.rs  visibility.rs
src/ory/: discovery.rs  hydra.rs  kratos.rs  mod.rs
src/posix/: allocate.rs  db.rs  device.rs  host_auth.rs  mod.rs  offline.rs  resolver.rs  scope.rs  sequences.rs
src/profiles/: identicon.rs  view.rs
src/saml/: db.rs  flow.rs  jackson.rs  mod.rs
src/settings/: account.rs  authorized_apps.rs  linked_providers.rs  mod.rs  offline_access.rs  oidc_links_db.rs  password.rs  profile.rs  sessions.rs  two_factor.rs
src/theming/: brand_hint.rs  color.rs  derive.rs  image.rs  (+2 more)
static/: styles.css  theme.js
templates/: _referrer_banner.html  base.html  card.html  consent.html  dashboard.html  error.html  error_boundary.html  legal.html  login.html  oauth_logout_confirm.html  recovery.html  registration.html  saml_blocked.html  settings.html  settings_2fa.html  settings_account.html  settings_account_delete_confirm.html  settings_authorized_apps.html  settings_linked_providers.html  settings_offline_access.html  settings_password.html  settings_password_handoff.html  settings_profile.html  settings_sessions.html  verification.html
tests/: README.md  i18n_harness.rs  i18n_pseudo.rs  integration.rs  oauth_no_membership_write.rs
(+190 files in other folders)
