[package]
name = "forseti-unixd"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "forseti-unixd"
path = "src/main.rs"

[dependencies]
forseti-unix-proto = { path = "../proto" }
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "sync", "time", "signal"] }
# rustls-tls to mirror the main `forseti` crate and avoid a system-openssl link.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
base64 = "0.22"
libc = "0.2"
# Offline-auth keystore: Argon2id KDF + HMAC-SHA256 host pepper, ct-compare.
argon2 = { version = "0.5", features = ["std"] }
hmac = "0.12"
sha2 = "0.10"
subtle = "2"
rand = "0.9"
async-trait = "0.1"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "sync", "time", "signal", "test-util"] }
tempfile = "3"
